--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xml2js",
+  "name": "@gzzhanghao/xml2js",
   "description": "Simple XML to JavaScript object converter.",
   "keywords": [
     "xml",
